--- a/order.html
+++ b/order.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
 <meta charset="UTF-8">
-<title>慢速永遠逃跑</title>
+<title>請飲料</title>
 <style>
     body{
         display: flex;
