--- a/order.html
+++ b/order.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
 <meta charset="UTF-8">
-<title>請飲料</title>
+<title>請請請</title>
 <style>
     body{
         display: flex;
@@ -38,33 +38,33 @@
 <body>
 
 <div class="option-group" >
-  <div style="font-weight: bold; font-size: 20px;">豪豪請喝星巴克好嗎？</div>
+  <div style="font-weight: bold; font-size: 20px;">大叔請問我去日本要帶多少錢</div>
 
   <!-- 正常可點 -->
   <div class="option">
     <input type="radio" name="drink" value="yes">
-    <span>好，要喝什麼來點</span>
+    <span>不用帶 我出錢</span>
   </div>
 
   <!-- 永遠逃跑 -->
   <div class="option runaway">
     <input type="radio" name="drink" value="no">
-    <span>才不要</span>
+    <span>你換個一兩萬比較安全吧</span>
   </div>
 
   <div class="option runaway">
     <input type="radio" name="drink" value="onTheHouse">
-    <span>你出錢我就請課</span>
+    <span>至少帶個信用卡</span>
   </div>
 
   <div class="option runaway">
     <input type="radio" name="drink" value="later">
-    <span>晚一點再說</span>
+    <span>信用卡跟錢都帶一些吧</span>
   </div>
 
   <div class="option runaway">
     <input type="radio" name="drink" value="dependsOnBrand">
-    <span>太貴了選便宜一點</span>
+    <span>當然要帶阿 你吃飯要自己付錢</span>
   </div>
 </div>
 
